--- a/develop/package.json
+++ b/develop/package.json
@@ -2,7 +2,8 @@
   "name": "develop",
   "version": "0.1.0",
   "private": true,
-  "basename": "/",
+  "author": "Cas",
+  "homepage": "https://github.com/Defy1x/c18-react-portfolio",
   "dependencies": {
     "@babel/core": "7.4.3",
     "@svgr/webpack": "4.1.0",
@@ -29,6 +30,7 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "file-loader": "3.0.1",
     "fs-extra": "7.0.1",
+    "gh-pages": "^3.2.3",
     "google-map-react": "^1.1.5",
     "html-webpack-plugin": "4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
@@ -87,6 +89,8 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
