update to package json

--- a/develop/package.json
+++ b/develop/package.json
@@ -2,7 +2,7 @@
   "name": "develop",
   "author": "Cas",
   "version": "0.1.0",
-  "homepage": "https://github.com/Defy1x/c18-react-portfolio",
+  "homepage": "https://defy1x.github.io/c18-react-portfolio/",
   "private": true,
   "dependencies": {
     "@babel/core": "7.4.3",
