--- a/develop/package.json
+++ b/develop/package.json
@@ -64,6 +64,7 @@
     "react-particles-js": "^2.7.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3",
     "react-scroll-up": "^1.3.7",
     "react-scrollspy": "^3.4.3",
     "react-slick": "^0.24.0",
